--- a/notebooks/notebook_SFT.ipynb
+++ b/notebooks/notebook_SFT.ipynb
@@ -24,8 +24,10 @@
         "id": "cEEe_S5Jt1eK"
       },
       "source": [
-        "This notebook trains a supervised fine-tuning (SFT) baseline to compare against GRPO results.\n",
-        "Uses the same data, hyperparameters, and system prompt as the GRPO experiments."
+        "This is a modular notebook that trains a supervised fine-tuning (SFT) baseline to compare against GRPO results.\n",
+        "We use the same data, hyperparameters, and system prompt as the GRPO experiments.\n",
+        "\n",
+        "The system prompt (currently sp-reflect) can be replaced by sp-base, sp-struct, and sp-declare, and so can the dataset." 
       ]
     },
     {
