--- a/notebooks/notebook_SFT.ipynb
+++ b/notebooks/notebook_SFT.ipynb
@@ -27,7 +27,7 @@
         "This is a modular notebook that trains a supervised fine-tuning (SFT) baseline to compare against GRPO results.\n",
         "We use the same data, hyperparameters, and system prompt as the GRPO experiments.\n",
         "\n",
-        "The system prompt (currently sp-reflect) can be replaced by sp-base, sp-struct, and sp-declare, and likewise for the dataset." 
+        "The system prompt (currently sp-reflect) can be replaced by sp-base, sp-struct, and sp-declare, and the dataset can be replaced to pair with the correct system prompt." 
       ]
     },
     {
