Fix wandb.init name formatting in notebook

--- a/notebooks/notebook_SFT.ipynb
+++ b/notebooks/notebook_SFT.ipynb
@@ -83,7 +83,7 @@
         "\n",
         "wandb.init(\n",
         "    project=\"gsm8k-prolog-prover\",\n",
-        "    name=\"sft-sp-struct\"   # Changed name\n",
+        "    name=\"sft-sp-struct\"\n",
         ")"
       ]
     },
