--- a/notebooks/notebook_SFT.ipynb
+++ b/notebooks/notebook_SFT.ipynb
@@ -249,8 +249,8 @@
         "def formatting_func(example):\n",
         "    \"\"\"\n",
         "    Format examples for SFT training.\n",
-        "    Wraps the reference Prolog code in <answer> tags.\n",
-        "    Note: We only supervise the <answer> section since we don't have \n",
+        "    Wraps the reference Prolog code in &lt;answer&gt; tags tags.\n",
+        "    Note: We only supervise the &lt;answer&gt; tags section since we don't have \n",
         "    ground-truth reasoning steps in the dataset.\n",
         "    \"\"\"\n",
         "    # Create the complete conversation with assistant response\n",
