--- a/notebooks/notebook_SFT.ipynb
+++ b/notebooks/notebook_SFT.ipynb
@@ -24,8 +24,10 @@
         "id": "cEEe_S5Jt1eK"
       },
       "source": [
-        "This notebook trains a supervised fine-tuning (SFT) baseline to compare against GRPO results.\n",
-        "Uses the same data, hyperparameters, and system prompt as the GRPO experiments."
+        "This is a modular notebook that trains a supervised fine-tuning (SFT) baseline to compare against GRPO results.\n",
+        "I uses the same data, hyperparameters, and system prompt as the GRPO experiments.\n",
+        "\n",
+        "The system prompt (currently sp-struct) can be replaced by sp-base, sp-declare, and sp-reflect, and the dataset can be replaced to pair with the correct system prompt.\n"
       ]
     },
     {
