--- a/notebooks/notebook_bayesian_hyperparameter_optimization.ipynb
+++ b/notebooks/notebook_bayesian_hyperparameter_optimization.ipynb
@@ -20,7 +20,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## GRPO - hyperparameter tuning (sp-struct-rwd1)"
+        "## GRPO - Bayesian hyperparameter optimization (sp-struct-rwd1)"
       ],
       "metadata": {
         "id": "y6uqM1dRq5wq"
