--- a/notebooks/notebook_hyperparameter_tuning.ipynb
+++ b/notebooks/notebook_hyperparameter_tuning.ipynb
@@ -21,7 +21,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## GRPO - hyperparameter-tuning (sp-struct-rwd1)"
+        "## GRPO - Bayesian hyperparameter optimization (sp-struct-rwd1)"
       ],
       "metadata": {
         "id": "y6uqM1dRq5wq"
@@ -493,7 +493,7 @@
         "        config = wandb.config\n",
         "\n",
         "        # Load Data as subset\n",
-        "        splits = get_gsm8k_split(subset_size=100, seed=42)\n",
+        "        splits = get_gsm8k_split(subset_size=2500, seed=42)\n",
         "        train_dataset = splits[\"train\"]\n",
         "        val_dataset = splits[\"validation\"]\n",
         "        test_dataset = splits[\"test\"]\n",
