Fix typo in notebook description

--- a/notebooks/notebook_SFT.ipynb
+++ b/notebooks/notebook_SFT.ipynb
@@ -25,7 +25,7 @@
       },
       "source": [
         "This is a modular notebook that trains a supervised fine-tuning (SFT) baseline to compare against GRPO results.\n",
-        "I uses the same data, hyperparameters, and system prompt as the GRPO experiments.\n",
+        "It uses the same data, hyperparameters, and system prompt as the GRPO experiments.\n",
         "\n",
         "The system prompt (currently sp-reflect) can be replaced by sp-base, sp-struct, and sp-declare, and the dataset can be replaced to pair up with the correct system prompt.\n"
       ]
